[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://assets/final/password.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dj1xewh1jckuq" path="res://assets/textures/block.png" id="2"]
[ext_resource type="PackedScene" uid="uid://c4hgblrlrpm1d" path="res://assets/scenes/soul_1.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://darkhuvppll3o" path="res://assets/final/chouse.tscn" id="4"]

[sub_resource type="TileSetAtlasSource" id="1"]
texture = ExtResource("2")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/script = null
script = null

[sub_resource type="TileSet" id="2"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("1")
script = null

[node name="Password1" type="Node2D"]
script = ExtResource("1")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("2")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 0, 0, 327699, 0, 0, 393235, 0, 0, 458771, 0, 0, 524307, 0, 0, 589843, 0, 0, 655379, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720911, 0, 0, 720910, 0, 0, 720909, 0, 0, 720908, 0, 0, 720907, 0, 0, 720906, 0, 0, 720905, 0, 0, 720904, 0, 0, 720903, 0, 0, 720902, 0, 0, 720901, 0, 0)

[node name="Soul1" parent="." instance=ExtResource("3")]
position = Vector2(160, 96)

[node name="Chouse" parent="." instance=ExtResource("4")]
position = Vector2(64, 49)
collision_layer = 0
collision_mask = 2

[node name="Label" type="Label" parent="Chouse"]
offset_left = -5.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 5.0
text = "1"

[node name="Chouse2" parent="." instance=ExtResource("4")]
position = Vector2(112, 49)
collision_layer = 0
collision_mask = 2

[node name="Label" type="Label" parent="Chouse2"]
offset_left = -5.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 5.0
text = "2"

[node name="Chouse3" parent="." instance=ExtResource("4")]
position = Vector2(160, 48)
collision_layer = 0
collision_mask = 2

[node name="Label" type="Label" parent="Chouse3"]
offset_left = -5.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 5.0
text = "3"

[node name="Chouse4" parent="." instance=ExtResource("4")]
position = Vector2(208, 48)
collision_layer = 0
collision_mask = 2

[node name="Label" type="Label" parent="Chouse4"]
offset_left = -5.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 5.0
text = "4"

[node name="Chouse5" parent="." instance=ExtResource("4")]
position = Vector2(256, 48)
collision_layer = 0
collision_mask = 2

[node name="Label" type="Label" parent="Chouse5"]
offset_left = -5.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 5.0
text = "5"

[node name="Chouse6" parent="." instance=ExtResource("4")]
position = Vector2(64, 152)
collision_layer = 0
collision_mask = 2

[node name="Label" type="Label" parent="Chouse6"]
offset_left = -5.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 5.0
text = "6"

[node name="Chouse7" parent="." instance=ExtResource("4")]
position = Vector2(112, 152)
collision_layer = 0
collision_mask = 2

[node name="Label" type="Label" parent="Chouse7"]
offset_left = -5.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 5.0
text = "7"

[node name="Chouse8" parent="." instance=ExtResource("4")]
position = Vector2(160, 152)
collision_layer = 0
collision_mask = 2

[node name="Label" type="Label" parent="Chouse8"]
offset_left = -5.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 5.0
text = "8"

[node name="Chouse9" parent="." instance=ExtResource("4")]
position = Vector2(200, 152)
collision_layer = 0
collision_mask = 2

[node name="Label" type="Label" parent="Chouse9"]
offset_left = -5.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 5.0
text = "9"

[node name="Chouse0" parent="." instance=ExtResource("4")]
position = Vector2(256, 152)
collision_layer = 0
collision_mask = 2

[node name="Label" type="Label" parent="Chouse0"]
offset_left = -5.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 5.0
text = "0"

[connection signal="body_entered" from="Chouse" to="." method="_on_chouse_body_entered"]
[connection signal="body_entered" from="Chouse2" to="." method="_on_chouse_2_body_entered"]
[connection signal="body_entered" from="Chouse3" to="." method="_on_chouse_3_body_entered"]
[connection signal="body_entered" from="Chouse4" to="." method="_on_chouse_4_body_entered"]
[connection signal="body_entered" from="Chouse5" to="." method="_on_chouse_5_body_entered"]
[connection signal="body_entered" from="Chouse6" to="." method="_on_chouse_6_body_entered"]
[connection signal="body_entered" from="Chouse7" to="." method="_on_chouse_7_body_entered"]
[connection signal="body_entered" from="Chouse8" to="." method="_on_chouse_8_body_entered"]
[connection signal="body_entered" from="Chouse9" to="." method="_on_chouse_9_body_entered"]
[connection signal="body_entered" from="Chouse0" to="." method="_on_chouse_0_body_entered"]
